# moveit_task_constructor

./: .gitignore
core/include/moveit/task_constructor/stages/: generate_grasp_pose.h  modify_planning_scene.h
core/src/: container.cpp  stage.cpp  task.cpp
core/src/solvers/: pipeline_planner.cpp
core/src/stages/: connect.cpp  generate_grasp_pose.cpp  generate_place_pose.cpp  modify_planning_scene.cpp  move_relative.cpp  move_to.cpp  pick.cpp
demo/: CMakeLists.txt  package.xml
demo/config/: franka_fr3_config.yaml  franka_mtc.rviz  franko_fr3_config.yaml  mtc.rviz  panda_config.yaml
demo/include/moveit_task_constructor_demo/: franka_pick_pipe_task.h  franka_pick_task.h  franka_place_task.h  hold_task.h  lift_task.h  move_home_task.h  pick_place_task.h  place_task.h  release_task.h
demo/launch/: demo.launch  franka_pick.launch  franka_pickplace.launch  gazebo_demo.launch  pickplace.launch
demo/src/: franka_pick_demo.cpp  franka_pick_pipe_demo.cpp  franka_pick_pipe_task.cpp  franka_pick_task.cpp  franka_place_task.cpp  hold_task.cpp  initial_pick_place_task.cpp  lift_task.cpp  move_home_task.cpp  pick_place_demo.cpp  pick_place_task.cpp  place_task.cpp  release_task.cpp
